[package]
name = "pokemon-shakespeare"
version = "0.1.0"
authors = ["felipe07 <felipe07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.111"
failure = "0.1.8"
pokerust = "0.2.0"