[package]
name = "pokemon-shakespeare"
version = "0.1.0"
authors = ["felipe07 <felipe07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pokerust = "0.2.0"
# reqwest = { version = "0.10", features = ["blocking", "json"] }
reqwest = "0.9.3"